// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputFee should render 1`] = `
<DocumentFragment>
  <div
    class="flex space-x-2"
    data-testid="InputFee"
  >
    <div
      class="flex-1"
    >
      <div
        class="sc-AxgMl cZbWSE"
      >
        <input
          class="sc-AxjAm ikaeZA overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-text transition-colors duration-200 px-4 py-3 "
          data-testid="InputCurrency"
          type="text"
          value="NaN"
        />
        <div
          class="absolute bottom-0 w-full px-1"
        >
          <div
            class="flex flex-wrap justify-center"
            data-testid="Range"
          >
            <div
              class="sc-AxheI fklffK"
              data-testid="Range__track"
              style="transform: scale(1); cursor: pointer;"
            >
              <div
                class="sc-Axmtr cJmGw"
                data-testid="Range__track__filled"
              >
                <div
                  aria-valuemax="10"
                  aria-valuemin="1"
                  aria-valuenow="NaN"
                  class="sc-AxmLO jJCZzX"
                  data-testid="Range__thumb"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, 0px);"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300"
        data-testid="SelectionBar"
        role="radiogroup"
      >
        <button
          aria-checked="false"
          class="sc-fzozJi cqpCRb relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Min
        </button>
        <button
          aria-checked="false"
          class="sc-fzozJi cqpCRb relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Average
        </button>
        <button
          aria-checked="false"
          class="sc-fzozJi cqpCRb relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Max
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee should update fee if value property changes 1`] = `
<DocumentFragment>
  <div
    class="flex space-x-2"
    data-testid="InputFee"
  >
    <div
      class="flex-1"
    >
      <div
        class="sc-AxgMl cZbWSE"
      >
        <input
          class="sc-AxjAm ikaeZA overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-text transition-colors duration-200 px-4 py-3 "
          data-testid="InputCurrency"
          type="text"
          value="1"
        />
        <div
          class="absolute bottom-0 w-full px-1"
        >
          <div
            class="flex flex-wrap justify-center"
            data-testid="Range"
          >
            <div
              class="sc-AxheI fklffK"
              data-testid="Range__track"
              style="transform: scale(1); cursor: pointer;"
            >
              <div
                class="sc-Axmtr cJmGw"
                data-testid="Range__track__filled"
              >
                <div
                  aria-valuemax="10"
                  aria-valuemin="1"
                  aria-valuenow="1"
                  class="sc-AxmLO jJCZzX"
                  data-testid="Range__thumb"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300"
        data-testid="SelectionBar"
        role="radiogroup"
      >
        <button
          aria-checked="true"
          class="sc-fzozJi cqpCRb relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Min
        </button>
        <button
          aria-checked="false"
          class="sc-fzozJi cqpCRb relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Average
        </button>
        <button
          aria-checked="false"
          class="sc-fzozJi cqpCRb relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Max
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee should update fee when clicking on avg 1`] = `
<DocumentFragment>
  <div
    class="flex space-x-2"
    data-testid="InputFee"
  >
    <div
      class="flex-1"
    >
      <div
        class="sc-AxgMl cZbWSE"
      >
        <input
          class="sc-AxjAm ikaeZA overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-text transition-colors duration-200 px-4 py-3 "
          data-testid="InputCurrency"
          type="text"
          value="2"
        />
        <div
          class="absolute bottom-0 w-full px-1"
        >
          <div
            class="flex flex-wrap justify-center"
            data-testid="Range"
          >
            <div
              class="sc-AxheI fklffK"
              data-testid="Range__track"
              style="transform: scale(1); cursor: pointer;"
            >
              <div
                class="sc-Axmtr cJmGw"
                data-testid="Range__track__filled"
              >
                <div
                  aria-valuemax="10"
                  aria-valuemin="1"
                  aria-valuenow="2"
                  class="sc-AxmLO jJCZzX"
                  data-testid="Range__thumb"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300"
        data-testid="SelectionBar"
        role="radiogroup"
      >
        <button
          aria-checked="false"
          class="sc-fzozJi cqpCRb relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Min
        </button>
        <button
          aria-checked="true"
          class="sc-fzozJi cqpCRb relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Average
        </button>
        <button
          aria-checked="false"
          class="sc-fzozJi cqpCRb relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Max
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee should update fee when clicking on max 1`] = `
<DocumentFragment>
  <div
    class="flex space-x-2"
    data-testid="InputFee"
  >
    <div
      class="flex-1"
    >
      <div
        class="sc-AxgMl cZbWSE"
      >
        <input
          class="sc-AxjAm ikaeZA overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-text transition-colors duration-200 px-4 py-3 "
          data-testid="InputCurrency"
          type="text"
          value="2"
        />
        <div
          class="absolute bottom-0 w-full px-1"
        >
          <div
            class="flex flex-wrap justify-center"
            data-testid="Range"
          >
            <div
              class="sc-AxheI fklffK"
              data-testid="Range__track"
              style="transform: scale(1); cursor: pointer;"
            >
              <div
                class="sc-Axmtr cJmGw"
                data-testid="Range__track__filled"
              >
                <div
                  aria-valuemax="10"
                  aria-valuemin="1"
                  aria-valuenow="2"
                  class="sc-AxmLO jJCZzX"
                  data-testid="Range__thumb"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300"
        data-testid="SelectionBar"
        role="radiogroup"
      >
        <button
          aria-checked="false"
          class="sc-fzozJi cqpCRb relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Min
        </button>
        <button
          aria-checked="false"
          class="sc-fzozJi cqpCRb relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Average
        </button>
        <button
          aria-checked="true"
          class="sc-fzozJi cqpCRb relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Max
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee should update fee when clicking on min 1`] = `
<DocumentFragment>
  <div
    class="flex space-x-2"
    data-testid="InputFee"
  >
    <div
      class="flex-1"
    >
      <div
        class="sc-AxgMl cZbWSE"
      >
        <input
          class="sc-AxjAm ikaeZA overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-text transition-colors duration-200 px-4 py-3 "
          data-testid="InputCurrency"
          type="text"
          value="2"
        />
        <div
          class="absolute bottom-0 w-full px-1"
        >
          <div
            class="flex flex-wrap justify-center"
            data-testid="Range"
          >
            <div
              class="sc-AxheI fklffK"
              data-testid="Range__track"
              style="transform: scale(1); cursor: pointer;"
            >
              <div
                class="sc-Axmtr cJmGw"
                data-testid="Range__track__filled"
              >
                <div
                  aria-valuemax="10"
                  aria-valuemin="1"
                  aria-valuenow="2"
                  class="sc-AxmLO jJCZzX"
                  data-testid="Range__thumb"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300"
        data-testid="SelectionBar"
        role="radiogroup"
      >
        <button
          aria-checked="false"
          class="sc-fzozJi cqpCRb relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Min
        </button>
        <button
          aria-checked="false"
          class="sc-fzozJi cqpCRb relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Average
        </button>
        <button
          aria-checked="false"
          class="sc-fzozJi cqpCRb relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Max
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
